# pyapp.boto3

./: .gitignore  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
pae/aws/: __init__.py  default_settings.py  session.py
pae/aws/conf/loaders/: s3_loader.py
pae/boto3/: __init__.py  checks.py  default_settings.py  factory.py
pyapp_ext/boto3/: __init__.py  checks.py  default_settings.py  factory.py
pyapp_ext/boto3/conf/loaders/: s3_loader.py
sample/: __main__.py  default_settings.py
