[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyapp-boto3"
version = "1.0b1"
description = "pyApp Extension for Boto 3"
authors = ["Tim Savage <tim@savage.company>"]
license = "BSD-3-Clause"
packages = [
    { include = "pyapp_ext" },
#    { include = "tests", format = "sdist" },
]
readme = "README.rst"
repository = "https://github.com/pyapp-org/pyapp.boto3"
keywords = ["smtp", "email", "aws", "pyapp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.6"
pyapp = "^4.3.0"
boto3 = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-asyncio = "^0.12.0"
pytest-cov = "^2.10.0"

[tool.poetry.plugins."pyapp.extensions"]
"pyapp-boto3" = "pyapp_ext.boto3:Extension"
