[metadata]
name = pyApp-Boto3
author = Tim Savage
author-email = tim@savage.company
description = Boto 3 Extension for PyApp
long-description = file: README.rst
url = https://github.com/pyapp-org/pae.aws
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    application
    framework
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages = pyapp_ext.boto3==1.10.34
test_suite = tests
setup_requires =
    pytest-runner==5.2
    setuptools >=38.3
install_requires =
    pyapp >=4.0b4
    boto3==1.10.34
tests_require =
    mock
    pytest
    pytest-cov

[options.entry_points]
pyapp.extensions =
    pyapp.boto3 = pyapp_ext.boto3:Extension

[options.extras_require]
dev =
	docutils
	black

[aliases]
test = pytest

[bdist_wheel]
universal = True

[check]
metadata = true
restructuredtext = true
strict = true
